// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`IsolateTest > TestObject constructor 1`] = `
{
  "$type": "UnitTest",
  "abortController": null,
  "children": [],
  "data": {
    "fieldName": "unicycle",
    "message": "I am Root.",
    "severity": "error",
    "testFn": [MockFunction],
    "testStatus": "UNTESTED",
    "type": "Test",
  },
  "key": null,
  "keys": {},
  "output": null,
  "parent": null,
}
`;

exports[`IsolateTest > testObject.warn > Should mark the test as warning 1`] = `
{
  "$type": "UnitTest",
  "abortController": null,
  "children": [],
  "data": {
    "fieldName": "unicycle",
    "message": "I am Root.",
    "severity": "warning",
    "testFn": [MockFunction],
    "testStatus": "UNTESTED",
    "type": "Test",
  },
  "key": null,
  "keys": {},
  "output": null,
  "parent": null,
}
`;
